--- a/.gitignore
+++ b/.gitignore
@@ -164,12 +164,20 @@ src/ExtractionOCaml/saturated_solinas
 src/ExtractionOCaml/unsaturated_solinas
 src/ExtractionOCaml/word_by_word_montgomery
 src/ExtractionOCaml/base_conversion
+src/ExtractionOCaml/bedrock2_saturated_solinas
+src/ExtractionOCaml/bedrock2_unsaturated_solinas
+src/ExtractionOCaml/bedrock2_word_by_word_montgomery
+src/ExtractionOCaml/bedrock2_base_conversion
 src/ExtractionOCaml/perf_unsaturated_solinas
 src/ExtractionOCaml/perf_word_by_word_montgomery
 src/ExtractionOCaml/saturated_solinas.exe
 src/ExtractionOCaml/unsaturated_solinas.exe
 src/ExtractionOCaml/word_by_word_montgomery.exe
 src/ExtractionOCaml/base_conversion.exe
+src/ExtractionOCaml/bedrock2_saturated_solinas.exe
+src/ExtractionOCaml/bedrock2_unsaturated_solinas.exe
+src/ExtractionOCaml/bedrock2_word_by_word_montgomery.exe
+src/ExtractionOCaml/bedrock2_base_conversion.exe
 src/ExtractionOCaml/perf_unsaturated_solinas.exe
 src/ExtractionOCaml/perf_word_by_word_montgomery.exe
 src/ExtractionOCaml/*.cmi
